--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
